refactor: rename and make share flight-summary and payment-details components

--- a/src/app/account/pages/summary-page/summary-page.component.html
+++ b/src/app/account/pages/summary-page/summary-page.component.html
@@ -1,1 +1,10 @@
-<p>summary-page works!</p>
+<div class="title-content">
+  <span class="summary-logo"></span>
+  <span class="summary-title title">Booking summary</span>
+</div>
+
+<!-- <app-flight-summary></app-flight-summary> -->
+
+<button class="primary-btn edit" (click)="navToAccount()">
+    Back to account
+</button>
