--- a/src/app/shared/components/flight-summary/flight-details/flight-details.component.html
+++ b/src/app/shared/components/flight-summary/flight-details/flight-details.component.html
@@ -1,4 +1,4 @@
-<mat-card class="top-border" *ngIf="bookingInfo$ | async as bookingInfo">
+<mat-card class="top-border">
   <div class="flight-container">
     <p class="flight-info">
       <span class="flight-number">{{flightNumber}}</span>
