--- a/src/app/shared/components/booking-table/booking-item/booking-item.component.html
+++ b/src/app/shared/components/booking-table/booking-item/booking-item.component.html
@@ -60,7 +60,7 @@
   </div>
 
   <ng-template #accPage>
-    <button class="more-btn" (click)="navToSummary()">
+    <button class="more-btn" (click)="navToSummary(booking)">
       <mat-icon>read_more</mat-icon>
     </button>
   </ng-template>
