--- a/src/app/shared/components/flight-summary/flight-summary.component.html
+++ b/src/app/shared/components/flight-summary/flight-summary.component.html
@@ -1,7 +1,8 @@
 <div class="summary-container">
   <app-flight-details *ngFor="let flight of sortedFlights;
     trackBy: trackByFn"
-    [flight]="flight">
+    [flight]="flight"
+    [passengers]="passengers">
   </app-flight-details>
   <app-payments-details></app-payments-details>
 </div>
