refactor: refactor payment-details

--- a/src/app/shared/components/flight-summary/flight-summary.component.html
+++ b/src/app/shared/components/flight-summary/flight-summary.component.html
@@ -4,6 +4,6 @@
     [flight]="flight"
     [passengers]="passengers">
   </app-flight-details>
-  <app-payments-details></app-payments-details>
+  <app-payments-details [flights]="sortedFlights" [passengers]="passengersNumber"></app-payments-details>
 </div>
 
