--- a/src/app/account/pages/summary-page/summary-page.component.html
+++ b/src/app/account/pages/summary-page/summary-page.component.html
@@ -5,7 +5,7 @@
 
   <app-flight-summary [selectedFlights]="selectedFlights" [passengers]="passengers"></app-flight-summary>
 
-  <button class="primary-btn edit" (click)="navToAccount()">
+  <button class="primary-btn back" (click)="navToAccount()">
       Back to account
   </button>
 </div>
