fix: add age checking for user, adult, child, infant passengers

--- a/src/app/shared/components/passengers-info-form/personal-info-form.component.html
+++ b/src/app/shared/components/passengers-info-form/personal-info-form.component.html
@@ -98,6 +98,10 @@
       *ngIf="dateOfBirthErrors?.['isFutureDate'] && !dateOfBirthErrors?.['required']">
         The date is invalid. You choose future date.
     </small>
+    <small class="error-message"
+      *ngIf="dateOfBirthErrors?.['isAgeValid'] && !dateOfBirthErrors?.['required']">
+        {{dateOfBirthErrors?.['isAgeValid']}}
+    </small>
    </div>
   </div>
 
