feat: add basic google registration set up

--- a/src/app/core/components/auth/auth.component.html
+++ b/src/app/core/components/auth/auth.component.html
@@ -36,7 +36,7 @@
 
     <div class="separator-container">
       <span class="separator-line"></span>
-      <span class="separator">or log in with your email</span>
+      <span class="separator">{{isLoginInSelect ? "or log in with your email" : "or create an account"}}</span>
       <span class="separator-line"></span>
     </div>
 
