--- a/src/app/core/components/auth/components/social-media-form/social-media-form.component.html
+++ b/src/app/core/components/auth/components/social-media-form/social-media-form.component.html
@@ -1,7 +1,4 @@
-<button class="social-btn">
-  <span class="social-icon google-icon"></span>
-  <span class="social-title">Continue with Google</span>
-</button>
+<button id="googleBtn" class="social-btn google_container"></button>
 
 <button class="social-btn">
   <span class="social-icon facebook-icon"></span>
