--- a/src/app/core/components/auth/components/social-media-form/social-media-form.component.scss
+++ b/src/app/core/components/auth/components/social-media-form/social-media-form.component.scss
@@ -5,6 +5,12 @@
   gap: 1.6rem;
 }
 
+.google_container {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+}
+
 .social-btn {
   display: flex;
   gap: 0.8rem;
