feat: update styles and delete facebook button

--- a/src/app/core/components/auth/components/social-media-form/social-media-form.component.html
+++ b/src/app/core/components/auth/components/social-media-form/social-media-form.component.html
@@ -1,6 +1,1 @@
-<button id="googleBtn" class="social-btn google_container"></button>
-
-<button class="social-btn">
-  <span class="social-icon facebook-icon"></span>
-  <span class="social-title">Continue with Facebook</span>
-</button>
+<div id="googleBtn" class="google_container"></div>
