--- a/src/app/core/components/auth/auth.component.html
+++ b/src/app/core/components/auth/auth.component.html
@@ -32,11 +32,9 @@
       </button>
     </div>
 
-    <app-social-media-form></app-social-media-form>
-
     <div class="separator-container">
       <span class="separator-line"></span>
-      <span class="separator">{{isLoginInSelect ? "or log in with your email" : "or create an account"}}</span>
+      <span class="separator">{{isLoginInSelect ? "log in with your email" : "create an account"}}</span>
       <span class="separator-line"></span>
     </div>
 
