--- a/src/app/core/components/header/components/breadcrumps/breadcrumps.component.scss
+++ b/src/app/core/components/header/components/breadcrumps/breadcrumps.component.scss
@@ -1,47 +1,37 @@
 :host {
-  max-width: 50rem;
-  min-width: 35rem;
   display: block;
   flex-grow: 1;
-
-  @media screen and (max-width: 400px) {
-    min-width: 25rem;
-  }
 }
 
 .breadcrumbs-list {
   display: flex;
   justify-content: space-between;
   color: var(--auxiliary-color);
-  padding: 0 2rem;
-
-  @media screen and (max-width: 450px) {
-    flex-direction: column;
-  }
+  gap: 1.5rem;
 }
 
 .breadcrumb {
   display: flex;
   align-items: center;
   gap: 1rem;
-  position: relative;
-  flex-grow: 0;
+
+  &:not(:last-child) {
+    flex-grow: 1;
+  } 
 }
 
 .icon {
-  display: inline-flex;
+  display: flex;
   justify-content: center;
+  align-items: center;
   width: 1.7rem;
-  height: 1.6rem;
-  background-image: url('/assets/step-bg.svg');
-  background-size: contain;
-  background-repeat: no-repeat;
-  background-position: center;
+  height: 1.7rem;
+  border-radius: 50%;
+  background-color: gray;
+  flex-shrink: 0;
 }
 
 .icon-step {
-  display: inline-flex;
-  align-items: center;
   color: var(--contrast-color);
   font-size: 1.2rem;
   font-weight: 600;
@@ -63,5 +53,35 @@
   text-align: end;
 }
 
+@media screen and (max-width: 1030px) {
+  :host.full {
+    order: 3;
+    min-width: 40rem;
+  }
 
+  .breadcrumb:not(:last-child)::after{
+    content: "";
+    width: 100%;
+    height: 2px;
+    background-color: var(--auxiliary-color);
+  }
 
+  .name {
+    flex-shrink: 0;
+  }
+}
+
+@media screen and (max-width: 450px) {
+  :host.full {
+    min-width: 100%;
+  }
+
+  .breadcrumb::after{
+    display: none;
+  }
+
+  .name {
+    flex-shrink: 1;
+    line-height: 100%;
+  }
+}
