--- a/src/app/core/components/header/components/profile/profile.component.scss
+++ b/src/app/core/components/header/components/profile/profile.component.scss
@@ -34,6 +34,10 @@
     color: var(--contrast-color);
   }
 
+  .mat-mdc-select-arrow-wrapper {
+    padding-left: 5px;
+  }
+
   .contrast {
     .select-btn__dark{
       border-color: var(--auxiliary-color);
