--- a/src/classes.scss
+++ b/src/classes.scss
@@ -73,9 +73,9 @@
 .select-btn {
   display: flex;
   gap: 1rem;
-  width: 16.2rem;
+  width: 16rem;
   height: 4rem;
-  padding: 0;
+  padding: 0 1rem;
   background: var(--neutral-color-90);
   border: 0.5px solid var(--contrast-color);
   border-radius: 0.4rem;
@@ -86,6 +86,15 @@
 
   &__small {
     width: 8rem;
+  }
+
+  @media screen and (max-width: 600px) {
+    width: fit-content;
+
+    &__medium, 
+    &__small {
+      width: fit-content;
+    }
   }
 }
 
@@ -98,4 +107,8 @@
     padding: 0 1rem;
     color: var(--error-color);
   }
+}
+
+.hidden {
+  display: none;
 }
