--- a/src/app/core/components/header/components/profile/profile.component.scss
+++ b/src/app/core/components/header/components/profile/profile.component.scss
@@ -13,7 +13,8 @@
     justify-content: space-evenly;
   }
 
-  .mat-mdc-select-value {
+  .mat-mdc-select-value,
+  .cdk-overlay-pane {
     width: auto !important;
   }
 
@@ -50,3 +51,8 @@
   }
 }
 
+@media screen and (max-width: 720px) {
+  .form-container {
+    gap: 1rem;
+  }
+}
