--- a/src/styles.scss
+++ b/src/styles.scss
@@ -74,12 +74,16 @@ label {
 body {
   @include font-main();
   background-color: var(--bg-main-color);
+  
+  @media screen and (max-width: 700px) {
+    @include font-main(1.4rem, 1.6rem);
+  }
 }
 
 h1,
 h2,
 h3 {
-  @include font-main($size: 2.4rem, $line-height: 2.8rem);
+  @include font-main($size: 2.2rem, $line-height: 2.4rem);
 }
 
 button {
@@ -102,4 +106,25 @@ button {
 
 :disabled {
   pointer-events: none;
+}
+
+.mat-typography h2,
+.mat-typography p {
+  padding: 0;
+  margin: 0;
+}
+
+.mat-typography h1,
+.mat-typography h2,
+.mat-typography h3 {
+  @include font-main($size: 2.2rem, $line-height: 2.4rem);
+}
+
+.mat-typography,
+.mat-mdc-select {
+  @include font-main();
+
+  @media screen and (max-width: 700px) {
+    @include font-main($size: 1.4rem, $line-height: 2.2rem);
+  }
 }
