--- a/src/app/booking/components/search-results/date-slider/date-item/date-item.component.scss
+++ b/src/app/booking/components/search-results/date-slider/date-item/date-item.component.scss
@@ -1,9 +1,3 @@
-:host {
-  padding-top: .5rem;
-  width: calc(100% / 5);
-  flex-shrink: 0;
-}
-
 .date-card {
   cursor: pointer;
   display: flex;
@@ -18,7 +12,6 @@
 }
 
 p {
-  font-size: 1.4rem;
   margin: 0;
   padding: 0;
 }
@@ -31,12 +24,10 @@ p {
 
 .price-tag {
   font-weight: bold;
-  font-size: 2rem;
   color: inherit;
 }
 
 .week-day {
-  font-size: 1.2rem;
   color: var(--auxiliary-color);
 }
 
@@ -52,15 +43,27 @@ p {
 .active {
   box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.2);
   border-bottom: .4rem solid;
-  margin: 2px;
+  margin: 0 2px;
   
   & .date {
     font-size: 2rem;
     color: var(--primary-color);
+    @media screen and (max-width: 700px) {  
+      font-size: 1.8rem;
+    }
   }
 
   & .price-tag {
     margin-top: .5rem;
-    font-size: 3rem;
+    font-size: 2.5rem;
+    @media screen and (max-width: 700px) {  
+      font-size: 1.8rem;
+    }
+  }
+}
+
+@media screen and (max-width: 420px) {  
+  .date-card {
+    padding: .5rem;
   }
 }
