--- a/src/app/booking/components/search-results/date-slider/date-slider.component.scss
+++ b/src/app/booking/components/search-results/date-slider/date-slider.component.scss
@@ -11,7 +11,11 @@
   align-items: flex-end;
   width: 100%;
   height: 10rem;
-  transform: translateX(-20%);
+  transform: translateX(calc(-100% / 5));
+}
+
+.inner-section_small {
+  transform: translateX(calc(-100% / 3));
 }
 
 .slider-arrow-btn {
@@ -24,7 +28,7 @@
   position: absolute;
   background-color: var(--bg-neutral);
   z-index: 1;
-  top: calc(50% - 1rem);
+  top: calc(50% - 1.5rem);
   margin: 0;
   padding: 0;
   transition: all .3s ease-in-out;
@@ -40,4 +44,14 @@
 
 .btn-next {
   right: 0
+}
+
+.date-item {
+  padding-top: .5rem;
+  width: calc(100% / 5);
+  flex-shrink: 0;
+}
+
+.date-item_small {
+  width: calc(100% / 3);
 }
