--- a/src/styles.scss
+++ b/src/styles.scss
@@ -128,3 +128,17 @@ button {
     @include font-main($size: 1.3rem, $line-height: 2rem);
   }
 }
+
+.font_small {
+  font-size: 1.2rem;
+}
+
+.font-large {
+  font-size: 2.2rem;
+}
+
+@media screen and (max-width: 700px) {  
+  .font-large {
+    font-size: 1.8rem;
+  }
+}
