--- a/src/app/shared/components/passengers-counter-form/passengers-counter-form.component.html
+++ b/src/app/shared/components/passengers-counter-form/passengers-counter-form.component.html
@@ -1,4 +1,4 @@
-<div class="passengers-select" [formGroup]="passengersForm">
+<div class="passengers-select font-main" [formGroup]="passengersForm">
   <div class="selected-option">
     <span [ngClass]="{'passengers-select__label': true, 'label_active': isSelectOpened, 'error': passengersForm.hasError('isPassengersValid')}">Passengers*</span>
     <div class="select" (click)="toggleSelect($event)">
