--- a/src/app/shared/components/passengers-counter-form/passengers-counter-form.component.scss
+++ b/src/app/shared/components/passengers-counter-form/passengers-counter-form.component.scss
@@ -40,9 +40,7 @@
 .passengers-select,
 .select,
 .number-input {
-  font-family: 'Roboto', sans-serif;
-  font-weight: 400;
-  font-size: 1.5rem;
+  font: inherit;
 }
 
 .passengers-select {
@@ -55,9 +53,9 @@
   padding: 1rem;
   top: 100%;
   border-radius: 0 0 .5rem.5rem;
-  left: 0;
   right: 0;
   width: 100%;
+  min-width: max-content;
   display: flex;
   flex-direction: column;
   gap: 1rem;
@@ -87,7 +85,7 @@
 .option {
   display: flex;
   flex-direction: row;
-  gap: 1.5rem;
+  gap: 1rem;
   align-items: center;
   justify-content: space-between;
 }
