--- a/src/app/booking/components/passengers-list/passenger-item/passenger-item.component.html
+++ b/src/app/booking/components/passengers-list/passenger-item/passenger-item.component.html
@@ -1,7 +1,6 @@
-<p class="passenger-title">
-  <span class="count">{{index + 1}}. </span>
-  <span class="title">{{passengerCategory}}</span>
-</p>
+<h3 class="title">
+  {{index + 1}}.{{passengerCategory}}
+</h3>
 
 <form [formGroup]="passengerFormGroup" class="form-container">
 
@@ -31,7 +30,7 @@
           >
             <mat-icon>remove</mat-icon>
           </button>
-          <input class="number-input" matInput type="number" formControlName="luggage" readonly/>
+          <input class="number-input" type="number" formControlName="luggage" readonly/>
           <button
             class="counter-btn"
             (click)="increment()"
@@ -42,9 +41,11 @@
         </div>
       </div>
 
-      <p class="error-baggage" [ngClass]="{'invisible': !isLuggageError}">
-        You can't add more than 2 luggage items per person
-      </p>
+      <div class="error-baggage validation">
+        <p class="error-message" [ngClass]="{'error': true, 'error_visible': isLuggageError}">
+          You can't add more than 2 luggage items per person
+        </p>
+      </div>
     </div>
 
   </div>
