--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,8 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,500;0,700;1,400;1,500;1,700&display=swap');
 
-@mixin font-main($size: 1.6rem, $line-height: 2.4rem) {
+@mixin font-main($size: 1.6rem, $line-height: 2.4rem, $font-weight: 400) {
   font-family: 'Roboto', sans-serif;
-  font-weight: 400;
+  font-weight: $font-weight;
   font-size: $size;
   line-height: $line-height;
   color: var(--main-color);
@@ -82,8 +82,16 @@ body {
 
 h1,
 h2,
-h3 {
-  @include font-main($size: 2.2rem, $line-height: 2.4rem);
+h3,
+.mat-typography h1,
+.mat-typography h2,
+.mat-typography h3 {
+  @include font-main($size: 2.2rem, $line-height: 2.4rem, $font-weight: 600);
+  margin: 0;
+
+  @media screen and (max-width: 700px) {
+    @include font-main(2rem, 2.3rem, 600);
+  }
 }
 
 button {
@@ -102,22 +110,19 @@ button {
   &:hover {
     cursor: pointer;
   }
+
+  @media screen and (max-width: 700px) {
+    padding: 1rem 1.5rem;
+  }
 }
 
 :disabled {
   pointer-events: none;
 }
 
-.mat-typography h2,
 .mat-typography p {
   padding: 0;
   margin: 0;
-}
-
-.mat-typography h1,
-.mat-typography h2,
-.mat-typography h3 {
-  @include font-main($size: 2.2rem, $line-height: 2.4rem);
 }
 
 .mat-typography,
@@ -132,6 +137,10 @@ button {
 
 .font-main {
   @include font-main();
+  
+  @media screen and (max-width: 700px) {
+    @include font-main(1.4rem, 1.6rem);
+  }
 }
 
 .font_small {
