--- a/src/app/shared/components/passengers-counter-form/passengers-counter-form.component.html
+++ b/src/app/shared/components/passengers-counter-form/passengers-counter-form.component.html
@@ -14,7 +14,7 @@
           <span>{{pas.category}}</span>
           <span class="description">{{pas.description}}</span>
         </div>
-        <app-counter [formControl]="pas.control" [min]="0" [max]="9"></app-counter>
+        <app-counter [control]="pas.control" [min]="0" [max]="9"></app-counter>
       </li>
     </ul>
   </div>
