feat: update adaptive styles for date-slider

--- a/src/app/booking/components/search-results/date-slider/date-slider.component.scss
+++ b/src/app/booking/components/search-results/date-slider/date-slider.component.scss
@@ -10,7 +10,7 @@
   flex-wrap: nowrap;
   align-items: flex-end;
   width: 100%;
-  height: 10rem;
+  height: 100%;
   transform: translateX(calc(-100% / 5));
 }
 
@@ -28,7 +28,7 @@
   position: absolute;
   background-color: var(--bg-neutral);
   z-index: 1;
-  top: calc(50% - 1.5rem);
+  top: calc(50% - 1rem);
   margin: 0;
   padding: 0;
   transition: all .3s ease-in-out;
@@ -47,7 +47,6 @@
 }
 
 .date-item {
-  padding-top: .5rem;
   width: calc(100% / 5);
   flex-shrink: 0;
 }
