--- a/src/app/booking/components/search-results/date-slider/date-item/date-item.component.html
+++ b/src/app/booking/components/search-results/date-slider/date-item/date-item.component.html
@@ -1,4 +1,4 @@
-<div [ngClass]="{'date-card': true, 'disabled': !dateItemDto.price || isDateInPast(), 'active': isActive}" (click)="selectDate()">
+<div [ngClass]="{'date-card': true, 'disabled': !dateItemDto.price || isDateInPast(), 'date-card_active': isActive}" (click)="selectDate()">
   <p class="date">{{ dateItemDto.date | date: 'dd MMM' }}</p>
   <p class="week-day font-small">{{ dateItemDto.date | date: 'EEEE' }}</p>
   <p class="price-tag font-large" *ngIf="dateItemDto.price && !isDateInPast() else noFlight">{{ dateItemDto.price | currency:'EUR':'symbol-narrow' }}</p>
