--- a/src/app/booking/components/search-results/date-slider/date-item/date-item.component.scss
+++ b/src/app/booking/components/search-results/date-slider/date-item/date-item.component.scss
@@ -4,11 +4,13 @@
   flex-direction: column;
   background-color: var(--accent-bg-color);
   gap: 0;
-  padding: 1rem;
+  padding: 1rem 2rem;
   text-align: center;
   justify-content: center;
   align-items: center;
-  transition: all .2s ease-in-out;
+  transition: border .2s ease-in-out;
+  height: 100%;
+  margin-top: 2rem;
 }
 
 p {
@@ -40,7 +42,7 @@ p {
   margin-top: .5rem;
 }
 
-.active {
+.date-card_active {
   box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.2);
   border-bottom: .4rem solid;
   margin: 0 2px;
@@ -54,7 +56,7 @@ p {
   }
 
   & .price-tag {
-    margin-top: .5rem;
+    margin-top: .3rem;
     font-size: 2.5rem;
     @media screen and (max-width: 700px) {  
       font-size: 1.8rem;
